log
Sun 08 Oct 2023 03:25:23 AM UTC: 
 tests:  0|4
total_score: 0/70
1c882b3
Sat 14 Oct 2023 09:30:48 PM UTC: 
 heap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:21: error: expected ‘;’ before ‘return’
   47 |   newHeap->capac = 3
      |                     ^
      |                     ;
   48 |   return newHeap;
      |   ~~~~~~             
heap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f434e0c
Sat 14 Oct 2023 09:30:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
56da289
Sat 14 Oct 2023 09:31:25 PM UTC: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|3
total_score: 10/70
f14a5fa
Sat 14 Oct 2023 09:31:34 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:35: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   40 |   newHeap->heapArray = (heapElem*)mlloc(3 * sizeof(heapElem));
      |                                   ^~~~~
      |                                   malloc
heap.c:40:24: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   40 |   newHeap->heapArray = (heapElem*)mlloc(3 * sizeof(heapElem));
      |                        ^
cc1: all warnings being treated as errors
Compilation failed
d593b08
Sat 14 Oct 2023 09:31:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:24: error: expected expression before ‘heapElem’
   40 |   newHeap->heapArray  (heapElem*)malloc(3 * sizeof(heapElem));
      |                        ^~~~~~~~
heap.c:40:3: error: called object is not a function or function pointer
   40 |   newHeap->heapArray  (heapElem*)malloc(3 * sizeof(heapElem));
      |   ^~~~~~~
heap.c:40:34: error: expected ‘;’ before ‘malloc’
   40 |   newHeap->heapArray  (heapElem*)malloc(3 * sizeof(heapElem));
      |                                  ^~~~~~
      |                                  ;
Compilation failed
d6ea68c
Sat 14 Oct 2023 09:31:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d058420
